--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
 body {
   margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+.container-left {
+  background: #e5e5e5;
+  width: 280px;
+  padding: 20px;
+}
+
+.container-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-image {
+  height: 50px;
+  border-radius: 10px;
+}
+
+.menu-item {
+  margin: 10px 0;
+}
+
+.collection {
+  padding: 20px;
+  flex: 1;
+}
+
+.collection-list {
+  background: #444444;
+  padding: 20px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.collection-item {
+  width: 150px;
+  height: 90px;
+  background: #fff;
+  border-radius: 10px;
+  margin: 0 10px;
+}
+
+.collection-item h3 {
+  margin: 0;
 }
