--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body {
 
 .container-left {
   background: #e5e5e5;
-  width: 280px;
+  width: 300px;
   padding: 20px;
 }
 
@@ -53,4 +53,34 @@ body {
 
 .collection-item h3 {
   margin: 0;
+}
+
+.button {
+  border-radius: 5px;
+  font-size: 1em;
+  border: 0;
+  padding: 4px 8px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button-blue {
+  background: #66aaff;
+}
+
+.button-red {
+  background: #dd0044;
+}
+
+.button-delete-menu-item {
+  font-size: 0.5em;
+}
+
+.input-text {
+  font-size: 1.5em;
+  padding: 4px 10px;
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  min-width: 500px;
 }
