--- a/index.css
+++ b/index.css
@@ -3,96 +3,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-}
-
-.container-left {
-  background: #e5e5e5;
-  width: 300px;
-  padding: 20px;
-}
-
-.container-right {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-}
-
-.menu-image {
+.item-image {
   object-fit: cover;
-  height: 80px;
-  width: 80px;
-  border-radius: 10px;
-}
-
-.menu-item {
-  margin: 10px 0;
-  align-items: center;
-  display: flex;
-}
-
-.menu-item * {
-  margin: 5px;
-}
-
-.collection {
-  padding: 20px;
-  flex: 1;
-}
-
-.collection-list {
-  background: #444444;
-  padding: 20px;
   height: 100px;
-  display: flex;
-  flex-direction: row;
-}
-
-.collection-item {
-  width: 150px;
-  height: 90px;
-  background: #fff;
+  width: 100px;
   border-radius: 10px;
-  margin: 0 10px;
-}
-
-.collection-item h3 {
-  margin: 0;
-}
-
-.button {
-  border-radius: 5px;
-  font-size: 1em;
-  border: 0;
-  padding: 4px 8px;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.button-blue {
-  background: #66aaff;
-}
-
-.button-red {
-  background: #dd0044;
-}
-
-.button-green {
-  background: #88ee88;
-}
-
-.button-delete-menu-item {
-  font-size: 0.5em;
-}
-
-.input-text {
-  font-size: 1.2em;
-  padding: 4px 10px;
-  border: 1px solid #cccccc;
-  border-radius: 2px;
-  min-width: 300px;
 }
